app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-deployment
  labels:
    app: wil-playground
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wil-playground
  template:
    metadata:
      labels:
        app: wil-playground
    spec:
      containers:
      - name: web-container
        # Using the specified image
        image: wil42/playground:v1 
        ports:
        - containerPort: 8888
